fix: #484 fixed lessons counter alignment and login form

--- a/assets/scss/lifter.scss
+++ b/assets/scss/lifter.scss
@@ -49,4 +49,12 @@ footer.llms-loop-item-footer {
       height: 200px;
     }
   }
+  .llms-lesson-counter {
+    display: inline-block;
+    margin-bottom: 0px;
+  }
+}
+
+.llms-person-login-form-wrapper {
+  max-width: 100%;
 }
